--- a/CircuitRouter-SimpleShell/Makefile
+++ b/CircuitRouter-SimpleShell/Makefile
@@ -2,7 +2,7 @@
 # Sistemas Operativos, DEI/IST/ULisboa 2018-19
 
 SOURCES = CircuitRouter-SimpleShell.c
-SOURCES+= ../lib/commandlinereader.c
+SOURCES+= ../lib/commandlinereader.c ../lib/list.o
 OBJS = $(SOURCES:%.c=%.o)
 CC   = gcc
 CFLAGS =-Wall -std=gnu99 -I../
@@ -14,8 +14,9 @@ all: $(TARGET)
 $(TARGET): $(OBJS)
 	$(CC) $(CFLAGS) $^ -o $(TARGET) $(LDFLAGS) 
 
-CircuitRouter-SimpleShell.o: CircuitRouter-SimpleShell.c ../lib/commandlinereader.h
+CircuitRouter-SimpleShell.o: CircuitRouter-SimpleShell.c ../lib/commandlinereader.h ../lib/list.h
 ../lib/commandlinereader.o: ../lib/commandlinereader.c ../lib/commandlinereader.h
+../lib/list.o: ../lib/list.c ../lib/list.h
 
 $(OBJS):
 	$(CC) $(CFLAGS) -c -o $@ $<
