remove commands, mv commands commands.txt, ignore txt
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.o
 .vscode
 *.res
+*.txt
 *.old
 /CircuitRouter-SeqSolver/CircuitRouter-SeqSolver
 CircuitRouter-SimpleShell/CircuitRouter-SimpleShell
