Small correction in Makefile Update .gitignore to ignore .speedups.csv doTest.sh advances

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.res
 *.txt
 *.old
+*.speedups.csv
 *.zip
 /CircuitRouter-ParSolver/CircuitRouter-ParSolver
 /CircuitRouter-SeqSolver/CircuitRouter-SeqSolver
