--- a/user/Makefile
+++ b/user/Makefile
@@ -1,2 +1,2 @@
 default:
-	gcc -Wall user.c cmds.c ../lib/net.c ../lib/dirs.c -o user
+	gcc -Wall user.c cmds.c ../lib/net.c ../lib/dirs.c ../lib/util.c -o user
