--- a/sreenshot_script/package.json
+++ b/sreenshot_script/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "images-to-pdf": "^1.0.3",
     "puppeteer": "^1.20.0",
     "yargs": "^14.2.0"
   }
