--- a/silo-client/pom.xml
+++ b/silo-client/pom.xml
@@ -19,6 +19,7 @@
 		<mainclass>pt.tecnico.sauron.silo.client.SiloClientApp</mainclass>
 		<server.host>localhost</server.host>
 		<server.port>8080</server.port>
+		<server.rtt>500</server.rtt>
 	</properties>
 
 	<dependencies>
