--- a/silo-server/pom.xml
+++ b/silo-server/pom.xml
@@ -16,7 +16,16 @@
 		<!-- see parent POM for more properties -->
 
 		<mainclass>pt.tecnico.sauron.silo.SiloServerApp</mainclass>
-		<server.port>8080</server.port>
+		<zoo.host>localhost</zoo.host>
+		<zoo.port>2181</zoo.port>
+
+		<!-- instance number -->
+		<instance>1</instance>
+
+		<server.host>localhost</server.host>
+		<server.port>808${instance}</server.port>
+		<server.path>/grpc/sauron/silo/${instance}</server.path>
+
 	</properties>
 
 	<dependencies>
@@ -25,6 +34,12 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>silo-contract</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<!-- ZK Naming -->
+		<dependency>
+			<groupId>pt.ulisboa.tecnico.sdis</groupId>
+			<artifactId>zk-naming</artifactId>
+			<version>1.0.3</version>
 		</dependency>
 	</dependencies>
 
@@ -66,7 +81,11 @@
 				<configuration>
 					<mainClass>${mainclass}</mainClass>
 					<arguments>
+						<argument>${zoo.host}</argument>
+						<argument>${zoo.port}</argument>
+						<argument>${server.host}</argument>
 						<argument>${server.port}</argument>
+						<argument>${server.path}</argument>
 					</arguments>
 				</configuration>
 			</plugin>
