First advances on gossip protocol

--- a/silo-server/pom.xml
+++ b/silo-server/pom.xml
@@ -23,8 +23,10 @@
 		<instance>1</instance>
 
 		<server.host>localhost</server.host>
-		<server.port>808${instance}</server.port>
+		<server.port>8080</server.port>
 		<server.path>/grpc/sauron/silo/${instance}</server.path>
+
+		<numberServers>2</numberServers>
 
 	</properties>
 
@@ -83,9 +85,11 @@
 					<arguments>
 						<argument>${zoo.host}</argument>
 						<argument>${zoo.port}</argument>
+						<argument>${instance}</argument>
 						<argument>${server.host}</argument>
 						<argument>${server.port}</argument>
 						<argument>${server.path}</argument>
+						<argument>${numberServers}</argument>
 					</arguments>
 				</configuration>
 			</plugin>
